ros2_ws/log/build_2025-04-20_13-38-26/catRobot/stderr.log
  File "/home/cat/robot/cat-stalker/ros2_ws/install/catRobot/lib/python3.12/site-packages/catRobot/lidarListener.py", line 88
    if d > 10
             ^
SyntaxError: expected ':'

